crates/cli/tests/snapshots/run_test__node_pnpm__installs_correct_version_using_corepack.snap
---
source: crates/cli/tests/run_test.rs
assertion_line: 903
expression: get_assert_output(&assert)
---
▪▪▪▪ pnpm install
▪▪▪▪ pnpm:version
6.32.0

Tasks: 1 completed
 Time: 100ms



